apply pr review
Signed-off-by: Miguel Álvarez <miguelwork92@gmail.com>